--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -2,6 +2,7 @@
 @import "global/mixins";
 @import "fonts/main-fonts";
 @import "fonts/icomoon";
+@import "global/typography";
 @import "global/components";
 @import "global/default";
 
