--- a/app/templates/includes/header/header-desk.twig
+++ b/app/templates/includes/header/header-desk.twig
@@ -1,4 +1,4 @@
-<div class="header__desk uk-visible@m">
+<div class="header__desk ">
 	{% include 'top-panel.twig' %}
 	{% include 'main-nav.twig' %}
 </div>
