--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -14,7 +14,7 @@
 </div>
 
 <!-- begin nav -->
-<nav class="nav">
+<nav class="nav" style="display: none;">
 	<ul class="main-nav">
 		<li><a href="#">Лет</a></li>
 		<li><a href="#">Деревнское угодье</a></li>
