--- a/app/templates/includes/header/top-panel.twig
+++ b/app/templates/includes/header/top-panel.twig
@@ -1,1 +1,35 @@
 
+<div class="uk-container">
+	<div class="someblock">
+		<img src="img/icon-svg/wave.svg" alt="" uk-scrollspy="cls:slide-up">
+	</div>
+</div>
+
+
+<a href="" class="btn"><span>попробуйте наш таймер</span></a>
+<a href="" class="btn btn--icon icon-clock"><span>попробуйте наш таймер</span></a>
+
+<div class="somediv">
+	<a href="" class="btn btn--yellow"><span>посмотреть все рецепты</span></a>
+	<a href="" class="btn btn--yellow"><span>Посмотреть все факты о яйце</span></a>
+	<a href="" class="btn btn--icon icon-clock btn--yellow"><span>посмотреть все рецепты</span></a>
+</div>
+
+<h1>Натуральный
+продукт</h1>
+
+
+<h2>Натуральный
+продукт</h2>
+
+
+
+<h3>Натуральный
+продукт</h3>
+
+
+
+<h4>Натуральный
+продукт</h4>
+
+
