--- a/app/sass/global/components.scss
+++ b/app/sass/global/components.scss
@@ -1,2 +1,91 @@
 /*______ COMPONENTS ______*/
+
+.btn {
+	position: relative;
+	margin-bottom: 30px;
+	padding: 0 25px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 72px;
+	max-width: 350px;
+	text-transform: uppercase;
+	text-align: center;
+	text-decoration: none;
+	background: #ffffff;
+	font-weight: 700;
+	border: 3px solid $yellow;
+	color: $yellow;
+	font-size: 16px;
+	line-height: 22px;
+	border-radius: 72px;
+	overflow: hidden;
+	transition: color .25s ease-in;
+	span {
+		position: relative;
+		color: $btColor;
+		z-index: 2;
+		transition: color .25s ease-in;
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		top: -15px;
+		left: -15px;
+		width: 0;
+		height: 0;
+		background: $yellow;
+		transition: all .45s ease-in;
+		border-radius: 72px;
+		z-index: 1;
+	}
+	&:hover {
+		text-decoration: none;
+		color: #ffffff;
+		span {
+			color: #ffffff;
+		}
+		&:after {
+			width: 400px;
+			height: 200px;
+		}
+	}
+	&--yellow {
+		color: $white;
+		background: $yellow;
+		max-width: 440px;
+		span {
+			color: inherit;
+		}
+		&:hover {
+			color: $tColor;
+			span {
+				color: inherit;
+			}
+			&:after {
+				width: 600px;
+				height: 300px;
+			}
+		}
+		&:after {
+			background: $white;
+		}
+	}
+	&--icon {
+		padding-left: 80px;
+		font-family: $mainFont !important;
+		&:before {
+			@include icomoon;
+			position: absolute;
+			top: 50%;
+			left: 17px;
+			transform: translateY(-50%);
+			color: inherit;
+			font-size: 36px;
+			z-index: 10;
+		}
+	}
+}
+
 /*______ END COMPONENTS ______*/
