--- a/app/sass/global/variables.scss
+++ b/app/sass/global/variables.scss
@@ -14,12 +14,21 @@ $retina: (min-resolution: 144dpi), (min-resolution: 1.5dppx);
 $retina-dpi: (min-resolution: 144dpi);
 $retina-ppx: (min-resolution: 1.5dppx);
 
-$mainFont: "MuseoSansCyrl";
-$secondFont: "Regular";
+$mainFont: "Circe";
+$secondFont: "Museo";
 $fontSize: 16px;
 $lineHeight: 18px;
 $fontWeight: 400;
+$tColor: #5b6356;
+$btColor: #333e2c;
+$bgColor: #faf4ef;
+
+$white: #ffffff;
+$green: #549537;
+//$yellow: linear-gradient(180deg, #ffa722 0%, #ffb422 100%);
+$yellow: #ffb422;
 
 $containerWidth: 1360px;
 $containerWidthSmall: 1020px;
 $containerWidthLarge: 1440px;
+
