--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -1,4 +1,24 @@
-<div class="logo1">
+
+<!-- begin nav -->
+<nav class="nav">
+	<div class="uk-container">
+		<ul class="main-nav">
+			<li><a href="#">Лето</a></li>
+			<li><a href="#">Деревнское угодье</a></li>
+			<li>
+				<span class="logo1">
+					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
+				</span>
+			</li>
+			<li><a href="#">Junior</a></li>
+			<li><a href="#">Сельская новь</a></li>
+		</ul>
+	</div>
+</nav><!-- end nav -->
+
+
+
+<!-- <div class="logo1">
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
 
@@ -12,21 +32,4 @@
 <div class="logo3">
 	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
 </div>
-
-<!-- begin nav -->
-<nav class="nav" style="display: none;">
-	<ul class="main-nav">
-		<li><a href="#">Лет</a></li>
-		<li><a href="#">Деревнское угодье</a></li>
-		<li>
-			<span class="logo2">
-				<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
-			</span>
-		</li>
-		<li><a href="#">Junior</a></li>
-		<li><a href="#">Сельская новь</a></li>
-	</ul>
-</nav><!-- end nav -->
-
-
-
+ -->
