--- a/app/templates/includes/header/top-panel.twig
+++ b/app/templates/includes/header/top-panel.twig
@@ -1,4 +1,30 @@
+<!-- begin top-panel -->
+<div class="top-panel">
+	<div class="uk-container">
 
+		<div class="top-panel__inner">
+
+			<a href="/timer.html" class="timer-link">
+				<span class="timer-link__icon icon-clock"></span>
+				<span class="timer-link__text">Таймер для варки яиц</span>
+			</a>
+
+			
+			<div class="top-panel-nav">
+				<ul class="nav-list">
+					<li><a href="#">Яйцо</a></li>
+					<li><a href="#">Рецепты</a></li>
+					<li><a href="#">О компании</a></li>
+					<li><a href="#">Переработка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
+		</div>
+
+	</div>
+</div><!-- end top-panel -->
+
+<!-- 
 <div class="uk-container">
 	<div class="someblock">
 		<img src="img/icon-svg/wave.svg" alt="" uk-scrollspy="cls:slide-up">
@@ -33,3 +59,4 @@
 продукт</h4>
 
 
+ -->
