--- a/app/css/style.css
+++ b/app/css/style.css
@@ -61,6 +61,19 @@ $desk-w: 960px;
 }
 
 h1,
+.title-h1,
+h2,
+.title-h2,
+h3,
+.title-h3,
+h4,
+.title-h4,
+h5,
+.title-h5 {
+  font-family: "Museo";
+}
+
+h1,
 .title-h1 {
   margin-bottom: 50px;
   /* font-size: 52px;
@@ -224,6 +237,60 @@ p {
 
 /*______ END COMPONENTS ______*/
 
+/*______ ANIMATION ______*/
+
+.slide-up {
+  -webkit-animation: slide-up 1.2s ease forwards;
+  -moz-animation: slide-up 1.2s ease forwards;
+  animation: slide-up 1.2s ease forwards;
+}
+
+@-webkit-keyframes slide-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-moz-keyframes slide-up {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(100%);
+    transform: translateY(100%);
+  }
+
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    transform: translateY(100%);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+/*______ END ANIMATION ______*/
+
 html,
 body,
 table {
@@ -277,13 +344,113 @@ svg {
 
 /*______ HEADER ______*/
 
-.header__desk {
-  margin-top: 150px;
+/*______ Top Panel ______*/
+
+.top-panel {
+  position: relative;
+  border-bottom: 1px solid #ece6e1;
+  z-index: 450;
 }
+
+.top-panel__inner {
+  padding: 13px 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.timer-link {
+  position: relative;
+  padding-left: 60px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #5b6356;
+}
+
+.timer-link:hover {
+  color: #333e2c;
+  text-decoration: none;
+}
+
+.timer-link__icon {
+  position: absolute;
+  top: -16px;
+  left: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 42px;
+  height: 39px;
+  background: #ffb422;
+  border-radius: 0 0 12px 12px;
+}
+
+.timer-link__icon:before {
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.nav-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.nav-list li {
+  margin-left: 30px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.nav-list li:first-child {
+  margin-left: 0;
+}
+
+.nav-list li a {
+  font-size: 14px;
+  line-height: 21px;
+  color: #5b6356;
+}
+
+/*______ End Top Panel ______*/
 
 /*______ Main Nav ______*/
 
 .main-nav {
+  position: relative;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -292,27 +459,106 @@ svg {
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -moz-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   height: 90px;
+  z-index: 500;
 }
 
 .main-nav li {
-  padding: 8px 15px;
+  margin-right: 40px;
+  display: block;
+}
+
+.main-nav li:first-child {
+  position: relative;
+  padding-right: 40px;
+}
+
+.main-nav li:first-child:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 3px;
+  height: 3px;
+  display: block;
+  background-color: #333e2c;
+  border-radius: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.main-nav li:last-child {
+  position: relative;
+  margin-right: 0;
+  padding-left: 40px;
+}
+
+.main-nav li:last-child:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 3px;
+  height: 3px;
+  display: block;
+  background-color: #333e2c;
+  border-radius: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .main-nav li a {
+  padding: 19px 17px;
   display: block;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.main-nav li a:hover {
+  text-decoration: none;
+}
+
+.main-nav li .logo2 {
+  margin: 0;
+}
+
+.main-nav li:nth-child(1) a {
+  background-color: #9bc045;
+  border-radius: 40% 50% 40% 55%;
+}
+
+.main-nav li:nth-child(2) a {
+  background-color: #3180CA;
+  border-radius: 20% 40% 45% 34%/52% 51% 48% 42%;
+}
+
+.main-nav li:nth-child(3) {
+  padding: 0;
+}
+
+.main-nav li:nth-child(4) a {
+  background-color: #C93E7F;
+  border-radius: 70% 42% 62% 50%;
+}
+
+.main-nav li:nth-child(5) a {
+  background-color: #D0724E;
+  border-radius: 78% 50% 34% 38%/68% 63% 58% 53%;
 }
 
 .logo1 {
@@ -320,14 +566,11 @@ svg {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: #ffa722;
-  background: -moz-linear-gradient(15deg, #ff9300 0%, #ffc90e 100%);
-  background: -o-linear-gradient(15deg, #ff9300 0%, #ffc90e 100%);
-  background: linear-gradient(75deg, #ff9300 0%, #ffc90e 100%);
 }
 
 .logo1 a {
   position: relative;
+  padding: 0 !important;
   display: block;
   width: 100%;
   height: 100%;
@@ -346,9 +589,10 @@ svg {
   background: linear-gradient(75deg, #ff8100 0%, #ffb906 100%);
   z-index: 141;
   border-radius: 75px 70px 60px 65px;
-  -webkit-animation: egg 5s linear infinite;
-  -moz-animation: egg 5s linear infinite;
-  animation: egg 5s linear infinite;
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  transition: all .3s ease;
 }
 
 .logo1 a:after {
@@ -367,6 +611,12 @@ svg {
   -webkit-animation: egg 4.5s linear infinite;
   -moz-animation: egg 4.5s linear infinite;
   animation: egg 4.5s linear infinite;
+}
+
+.logo1 a:hover:before {
+  -webkit-animation: egg 5s linear infinite;
+  -moz-animation: egg 5s linear infinite;
+  animation: egg 5s linear infinite;
 }
 
 .logo1 img {
@@ -644,7 +894,6 @@ svg {
 .logo1,
 .logo2,
 .logo3 {
-  margin: 50px;
   display: inline-block;
   vertical-align: top;
 }
@@ -653,64 +902,71 @@ svg {
 
 /*______ END HEADER ______*/
 
-/*______ MAIN CONTENT ______*/
+/*______ Main Banner ______*/
 
-.someblock {
+.main-banner {
   position: relative;
+}
+
+.main-banner__img {
+  position: relative;
+}
+
+.main-banner__img svg {
   width: 100%;
-  height: 100vh;
-  background-color: #faf4ef;
+  height: 100px;
 }
 
-.someblock img {
+.main-banner__img:after {
   position: absolute;
-  bottom: -50px;
   left: 0;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+  display: block;
+  background: #ffffff;
+  border: 1px solid;
 }
 
-.slide-up {
-  -webkit-animation: slide-up .8s ease forwards;
-  -moz-animation: slide-up .8s ease forwards;
-  animation: slide-up .8s ease forwards;
+.main-banner__text {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  padding: 11%;
+  color: #ffffff;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
-@-webkit-keyframes slide-up {
-  0% {
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
-  }
-
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
+.main-banner__title {
+  max-width: 640px;
+  margin: 0 auto 30px;
+  text-align: center;
 }
 
-@-moz-keyframes slide-up {
-  0% {
-    -moz-transform: translateY(100%);
-    transform: translateY(100%);
-  }
-
-  100% {
-    -moz-transform: translateY(0);
-    transform: translateY(0);
-  }
+.main-banner__title h1 {
+  color: #ffffff;
 }
 
-@keyframes slide-up {
-  0% {
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    transform: translateY(100%);
-  }
-
-  100% {
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    transform: translateY(0);
-  }
+.main-banner__subtitle {
+  margin-bottom: 30px;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .8px;
 }
+
+.main-banner svg {
+  color: #ffb422;
+}
+
+/*______ End Main Banner ______*/
+
+/*______ MAIN CONTENT ______*/
 
 /*______ END MAIN CONTENT ______*/
 
