--- a/app/sass/global/typography.scss
+++ b/app/sass/global/typography.scss
@@ -1,3 +1,11 @@
+h1, .title-h1 ,
+h2, .title-h2 ,
+h3, .title-h3 ,
+h4, .title-h4 ,
+h5, .title-h5 {
+	font-family: $secondFont;
+}
+
 h1, .title-h1 {
 	margin-bottom: 50px;
 	@include text-size(96,96);
