--- a/app/sass/global/components.scss
+++ b/app/sass/global/components.scss
@@ -98,14 +98,30 @@
 	animation: slide-up 1.2s ease forwards;
 }
 
+.slide-up-abs {
+	animation: slide-up-abs 1.2s ease forwards;
+}
+
+
 @keyframes slide-up {
 	0%{
 		opacity: 0;
-		transform: translateY(100%);
+		transform: translateY(100px);
 	}
 	100%{
 		opacity: 1;
 		transform: translateY(0);
+	}
+}
+
+@keyframes slide-up-abs {
+	0%{
+		opacity: 0;
+		transform: translateY(100px) translateX(-50%);
+	}
+	100%{
+		opacity: 1;
+		transform: translateY(0) translateX(-50%);
 	}
 }
 
