--- a/app/sass/header/header-desk.scss
+++ b/app/sass/header/header-desk.scss
@@ -342,6 +342,32 @@
 	animation: egg 3s linear infinite;
 }
 
+.circle-1 {
+	border-radius: 40% 50% 50% 35%;
+}
+
+.circle-2 {
+	border-radius: 40% 50% 50% 35%;
+}
+
+.circle-3 {
+	border-radius: 40% 50% 50% 35%;
+}
+
+.circle-4 {
+	border-radius: 40% 50% 50% 35%;
+}
+
+.circle-5 {
+	border-radius: 40% 50% 50% 35%;
+}
+
+.circle-6 {
+	border-radius: 40% 50% 50% 35%;
+}
+
+
+
 @keyframes egg {
 	0% {
 		border-radius: 75px 70px 60px 65px;
