--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "header/header";
 @import "content/main-banner";
+@import "content/advantages-list";
 @import "content/content";
 @import "footer/footer";
 
