--- a/app/css/style.css
+++ b/app/css/style.css
@@ -93,6 +93,14 @@ h2,
   margin-bottom: 50px;
 }
 
+h3,
+.title-h3 {
+  margin-bottom: 15px;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: bold;
+}
+
 p {
   font-size: 18px;
   line-height: 26px;
@@ -245,11 +253,17 @@ p {
   animation: slide-up 1.2s ease forwards;
 }
 
+.slide-up-abs {
+  -webkit-animation: slide-up-abs 1.2s ease forwards;
+  -moz-animation: slide-up-abs 1.2s ease forwards;
+  animation: slide-up-abs 1.2s ease forwards;
+}
+
 @-webkit-keyframes slide-up {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
   }
 
   100% {
@@ -262,8 +276,8 @@ p {
 @-moz-keyframes slide-up {
   0% {
     opacity: 0;
-    -moz-transform: translateY(100%);
-    transform: translateY(100%);
+    -moz-transform: translateY(100px);
+    transform: translateY(100px);
   }
 
   100% {
@@ -276,9 +290,9 @@ p {
 @keyframes slide-up {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    transform: translateY(100%);
+    -webkit-transform: translateY(100px);
+    -moz-transform: translateY(100px);
+    transform: translateY(100px);
   }
 
   100% {
@@ -286,6 +300,50 @@ p {
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
     transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes slide-up-abs {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100px) translateX(-50%);
+    transform: translateY(100px) translateX(-50%);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0) translateX(-50%);
+    transform: translateY(0) translateX(-50%);
+  }
+}
+
+@-moz-keyframes slide-up-abs {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(100px) translateX(-50%);
+    transform: translateY(100px) translateX(-50%);
+  }
+
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0) translateX(-50%);
+    transform: translateY(0) translateX(-50%);
+  }
+}
+
+@keyframes slide-up-abs {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100px) translateX(-50%);
+    -moz-transform: translateY(100px) translateX(-50%);
+    transform: translateY(100px) translateX(-50%);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0) translateX(-50%);
+    -moz-transform: translateY(0) translateX(-50%);
+    transform: translateY(0) translateX(-50%);
   }
 }
 
@@ -790,6 +848,30 @@ svg {
   animation: egg 3s linear infinite;
 }
 
+.circle-1 {
+  border-radius: 40% 50% 50% 35%;
+}
+
+.circle-2 {
+  border-radius: 40% 50% 50% 35%;
+}
+
+.circle-3 {
+  border-radius: 40% 50% 50% 35%;
+}
+
+.circle-4 {
+  border-radius: 40% 50% 50% 35%;
+}
+
+.circle-5 {
+  border-radius: 40% 50% 50% 35%;
+}
+
+.circle-6 {
+  border-radius: 40% 50% 50% 35%;
+}
+
 @-webkit-keyframes egg {
   0% {
     border-radius: 75px 70px 60px 65px;
@@ -906,6 +988,7 @@ svg {
 
 .main-banner {
   position: relative;
+  min-height: 650px;
 }
 
 .main-banner__img {
@@ -964,7 +1047,127 @@ svg {
   color: #ffb422;
 }
 
+.fly-box {
+  position: absolute;
+  left: 50%;
+  bottom: -240px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 980;
+}
+
 /*______ End Main Banner ______*/
+
+/*______ Advantages list ______*/
+
+.advantages-section {
+  position: relative;
+  padding: 400px 0;
+  width: 100%;
+  min-height: 850px;
+}
+
+.advantages-section__inner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.advantages-section .center-box {
+  position: relative;
+  z-index: 800;
+  /* 		position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%); */
+}
+
+.advantages-list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: inline-block;
+  vertical-align: top;
+  counter-reset: item;
+}
+
+.advantages-list li {
+  position: absolute;
+  width: 300px;
+  min-height: 200px;
+}
+
+.advantages-list li:before {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  counter-increment: item;
+  content: "0" counter(item);
+}
+
+.advantage-item {
+  position: relative;
+  padding-top: 160px;
+}
+
+.advantage-item__img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 230px;
+  height: 230px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  background: #FAF4EF;
+  z-index: 100;
+}
+
+.advantage-item__text {
+  position: relative;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 22px;
+  z-index: 150;
+}
+
+/*______ End Advantages list ______*/
 
 /*______ MAIN CONTENT ______*/
 
