--- a/app/sass/global/typography.scss
+++ b/app/sass/global/typography.scss
@@ -27,7 +27,10 @@ h2, .title-h2 {
 }
 
 h3, .title-h3 {
-	
+	margin-bottom: 15px;
+	font-size: 24px;
+	line-height: 29px;
+	font-weight: bold;
 }
 
 h4, .title-h4 {
@@ -35,7 +38,7 @@ h4, .title-h4 {
 }
 
 h5, .title-h5 {
-
+	
 }
 
 
