--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -6,19 +6,19 @@
 
 			<div class="main-banner__img">
 				<img src="img/media/main-banner-1-1440x730.png" alt="">
-<!-- 				<svg>
-	<defs>
-		<clipPath id="cut-center">
-			<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
-		</clipPath>
-	</defs>
-	<rect
-		width="100%"
-		height="400px"
-		clip-path="url(#cut-center)"
-		fill="transparent"
-		>
-</svg> -->
+				<!-- 				<svg>
+					<defs>
+						<clipPath id="cut-center">
+							<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
+						</clipPath>
+					</defs>
+					<rect
+						width="100%"
+						height="400px"
+						clip-path="url(#cut-center)"
+						fill="transparent"
+						>
+				</svg> -->
 			</div>
 
 			<div class="main-banner__text">
@@ -32,7 +32,105 @@
 				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-down"></use>
 				</svg>
 			</div>
+			
+			<div class="fly-box" uk-scrollspy="cls: slide-up-abs">
+				<img src="img/media/egg-box-1.png" alt="Лето">
+			</div>
 
 		</div>
 	</div>
+
+	<section class="advantages-section">
+		<div class="uk-container">
+			<div class="advantages-section__inner">
+				<ul class="advantages-list">
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-1">
+								<img data-src="img/media/advantage-img/advantage-img-1.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Контроль свежести</div>
+								<div class="text">
+									Мы ставим дату сортировки на каждом яйце, чтобы вы были уверены в его свежести
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-2">
+								<img data-src="img/media/advantage-img/advantage-img-2.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Яркий желток</div>
+								<div class="text">
+									Благодаря содержанию в корме отборной кукурузы у яиц Лето яркий солнечный желток
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-3">
+								<img data-src="img/media/advantage-img/advantage-img-3.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Натуральный корм</div>
+								<div class="text">
+									Основу корма куриц составляет натуральная пшеница, кукуруза, соевые бобы, а также подсолнечник
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-4">
+								<img data-src="img/media/advantage-img/advantage-img-4.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Куры несушки лучших пород</div>
+								<div class="text">
+									Hisex Brown — голландская порода куриц-несушек, одна из самых популярных в мире
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-5">
+								<img data-src="img/media/advantage-img/advantage-img-5.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Двойной контроль</div>
+								<div class="text">
+									Только в марке Лето двойной контроль качества продукции перед упаковыванием
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="advantage-item">
+							<div class="advantage-item__img circle-6">
+								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
+							</div>
+							<div class="advantage-item__text">
+								<div class="title-h3">Размер — CО и С1</div>
+								<div class="text">
+									Используются столовые яйца отборной и первой категории (СО и С1)
+								</div>
+							</div>
+							<a href="#" class="advantage-item__link">
+								Подробнее про шкалу размеров
+							</a>
+						</div>
+					</li>
+				</ul>
+				<div class="center-box">
+					<img src="img/media/advantage-img/egg-green.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
 {% endblock %}
