--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -46,7 +46,10 @@
 				<ul class="advantages-list">
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-1">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-1.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -59,7 +62,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-2">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-2.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -72,7 +78,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-3">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-3.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -85,7 +94,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-4">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-4.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -98,7 +110,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-5">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-5.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
@@ -111,7 +126,10 @@
 					</li>
 					<li>
 						<div class="advantage-item">
-							<div class="advantage-item__img circle-6">
+							<div class="advantage-item__img">
+								<svg width="100%" height="100%" class="">
+								  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#ellipse-1"></use>
+								</svg>
 								<img data-src="img/media/advantage-img/advantage-img-6.svg" alt="" uk-img>
 							</div>
 							<div class="advantage-item__text">
