--- a/app/sass/global/components.scss
+++ b/app/sass/global/components.scss
@@ -125,4 +125,23 @@
 	}
 }
 
+@keyframes move-toggle {
+	0% {
+		transform: translateY(0);
+	}
+	25% {
+		transform: translateY(-5px);
+	}
+	50% {
+		transform: translateY(0);
+	}
+	75% {
+		transform: translateY(5px);
+	}
+	100% {
+		transform: translateY(0);
+	}
+
+}
+
 /*______ END ANIMATION ______*/
